subject extract ok

--- a/config.yml
+++ b/config.yml
@@ -26,6 +26,11 @@ engines:
     encoding:  'utf8'
 #     start_tag: '[%'
 #     end_tag:   '%]'
+  JSON:
+    allow_blessed: 1
+    convert_blessed: 1
+
+serializer: "JSON"
 
 session: "YAML"
 
